# Machinam

./: .gitignore  CMakeLists.txt  build.bat  run.bat  vcpkg.json
assets/: Shader.hlsl
docs/: Assets.md  ideas.md
docs/.obsidian/: workspace
engine/: CMakeLists.txt
engine/src/: main.cpp  pch.h  utils.h
engine/src/engine/: EngineRuntime.cpp  EngineRuntime.h
engine/src/engine/command/: CommandAllocator.h
engine/src/engine/devices/: HardwareAdapterFactory.h  LogicalDevice.cpp
engine/src/engine/pipeline/: PipelineStateBuilder.h  RootSignature.cpp  Shader.cpp
engine/src/engine/surface/: RenderTargetViews.h  SwapChain.h  SynchronisationController.h
potentia-test/math/: quaternion-static.cpp  quaternion.cpp
potentia/core/: EngineCore.h  macros.h
potentia/core/base/: Singleton.h
potentia/infra/: GameRunner.cpp  GameRunner.h
potentia/infra/command/: CommandAllocator.cpp  CommandAllocator.h  CommandList.cpp  CommandList.h  CommandQueue.cpp  CommandQueue.h
potentia/infra/devices/: HardwareAdapterFactory.cpp  HardwareAdapterFactory.h  LogicalDevice.cpp  LogicalDevice.h
potentia/infra/io/: PathUtility.cpp  PathUtility.h
potentia/infra/pipeline/: PipelineState.cpp  PipelineState.h  RootSignature.cpp  RootSignature.h  Shader.cpp  Shader.h
potentia/infra/resource/: AbstractBuffer.cpp  AbstractBuffer.h  VertexBuffer.cpp  VertexBuffer.h
potentia/infra/structure/: BehaviourRegistry.cpp  BehaviourRegistry.h
potentia/infra/surface/: RenderTargetViews.cpp  RenderTargetViews.h  SwapChain.cpp  SwapChain.h  SynchronisationController.cpp  SynchronisationController.h
potentia/infra/window/: GameWindow.cpp  GameWindow.h
potentia/math/matrix/: Matrix4x4.h
potentia/math/quat/: Quaternion.cpp  Quaternion.h
potentia/math/transform/: Transform.h
potentia/math/vector/: Float2.cpp  Float2.h  Float3.cpp  Float3.h  Float4.cpp  Float4.h  VectorBase.h  WrappedXMVector.h
potentia/structure/: GameInstance.cpp  GameInstance.h  Registry.h
potentia/structure/actor/: Actor.h
potentia/structure/base/: Behaviour.cpp  Behaviour.h  ComponentActor.cpp  ComponentActor.h
potentia/structure/behaviour/: EngineBehaviour.cpp  EngineBehaviour.h
potentia/structure/data/: Vertex.h
potentia/structure/level/: Level.h
potentia/structure/pipeline/: GraphicsPipeline.cpp  GraphicsPipeline.h
sample/: SampleGame.cpp  SampleGame.h  main.cpp
sample/pipelines/: MainGfxPipeline.cpp  MainGfxPipeline.h
samples/: CMakeLists.txt
samples/triangle/: CMakeLists.txt
samples/triangle/src/: main.cpp
scripts/: build.ps1  build_test.ps1  clean.ps1
src/: d3dx12.h  main.cpp
src/engine/base/: Singleton.h
src/engine/command/: CommandAllocator.cpp  CommandQueue.cpp  CommandQueue.h
src/engine/devices/: HardwareAdapterFactory.cpp  LogicalDevice.h
src/potentia-core/: error.cpp  pch.h
src/potentia-engine/: engine_runtime.h
src/potentia-hal/: hal_factory.cpp  hal_factory.h
tools/: CMakeLists.txt
tools/asset-bundler/: AssetBundler.cpp  AssetBundler.h  common.h  main.cpp
(+25 files in other folders)
